--- a/client/login.html
+++ b/client/login.html
@@ -37,7 +37,7 @@
                             <div class="d-flex justify-content-between align-items-center w-100 mt-4">
                                 <span>¿No tienes una cuenta? <a href="signup.html">Crear una</a></span>
                             </div>
-                            <button type="button" class="btn btn-inicio w-100 mt-3 rounded-3" onclick="iniciarSesion()">Iniciar Sesión</button>
+                            <button type="button" id="login" class="btn btn-inicio w-100 mt-3 rounded-3" onclick="iniciarSesion()">Iniciar Sesión</button>
                         </form>
                     </div>
                 </div>
