--- a/nuevo client/index.html
+++ b/nuevo client/index.html
@@ -7,7 +7,7 @@
     <title>Glucontrol</title>
   </head>
   <body>
-    <div id="root" class="my-2"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
